docs/v0.2.0a285/_sources/reference/_autosummary/hpcflow.sdk.core.errors.rst.txt
hpcflow.sdk.core.errors
=======================

.. toctree::
   :includehidden:

.. automodule:: hpcflow.sdk.core.errors

   
   
   

   
   
   

   
   
   

   
   
   .. rubric:: Exceptions

   .. autosummary::
      :toctree:
   
      ActionEnvironmentMissingNameError
      ActionInputHasNoSource
      ActionOutputNotSchemaOutput
      ContainerKeyError
      DuplicateExecutableError
      EnvironmentPresetUnknownEnvironmentError
      ExtraInputs
      InapplicableInputSourceElementIters
      IncompatibleParallelModeError
      IncompatibleSGEPEError
      IncompatibleSLURMArgumentsError
      IncompatibleSLURMPartitionError
      InvalidIdentifier
      InvalidInputSourceTaskReference
      JobscriptSubmissionFailure
      LoopAlreadyExistsError
      LoopTaskSubsetError
      MalformedNestingOrderPath
      MalformedParameterPathError
      MalformedWorkflowError
      MayNeedObjectError
      MissingCompatibleActionEnvironment
      MissingElementGroup
      MissingEnvironmentError
      MissingEnvironmentExecutableError
      MissingEnvironmentExecutableInstanceError
      MissingInputs
      MissingParameterData
      MissingStoreEARError
      MissingStoreElementError
      MissingStoreElementIterationError
      MissingStoreTaskError
      MissingVariableSubstitutionError
      MultipleEnvironmentsError
      NoAvailableElementSetsError
      NoCLIFormatMethodError
      NoCoincidentInputSources
      NoCompatibleSGEPEError
      NotSubmitMachineError
      OutputFileParserNoOutputError
      ParametersMetadataReadOnlyError
      ResourceValidationError
      RunNotAbortableError
      SubmissionEnvironmentError
      SubmissionFailure
      TaskSchemaExtraInputs
      TaskSchemaMissingActionOutputs
      TaskSchemaValidationError
      TaskTemplateInvalidNesting
      TaskTemplateMultipleInputValues
      TaskTemplateMultipleSchemaObjectives
      TaskTemplateUnexpectedInput
      TaskTemplateUnexpectedSequenceInput
      UnavailableInputSource
      UnknownActionDataKey
      UnknownActionDataParameter
      UnknownEnvironmentPresetError
      UnknownResourceSpecItemError
      UnknownSGEPEError
      UnknownSLURMPartitionError
      UnrequiredInputSources
      UnsetParameterDataError
      UnsetParameterDataErrorBase
      UnsetParameterFractionLimitExceededError
      UnsetParameterNumberLimitExceededError
      UnsupportedActionDataFormat
      UnsupportedOSError
      UnsupportedSchedulerError
      UnsupportedShellError
      UserFriendlyException
      WorkflowNotFoundError
      WorkflowSubmissionFailure
      YAMLError
   
   



